--- a/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
+++ b/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
@@ -23,3 +23,9 @@
   <input type="text" ng-model="aurora_env" ng-required="true"/>
   <span class="form_error" ng-show="GOINPUTNAME[aurora_env].$error.server">{{GOINPUTNAME[aurora_env].$error.server}}</span>
 </div>
+
+<div class="form_item_block">
+  <label>Agent Source URL:</label>
+  <input type="text" ng-model="agent_source_url" ng-required="false"/>
+  <span class="form_error" ng-show="GOINPUTNAME[agent_source_url].$error.server">{{GOINPUTNAME[agent_source_url].$error.server}}</span>
+</div>
