--- a/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
+++ b/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
@@ -1,31 +1,39 @@
 <!-- Ensure that the keys here are also declared in the get-cluster-profile-metadata response. -->
 
-<div class="form_item_block">
-  <label>Aurora URL:<span class='asterix'>*</span></label>
-  <input type="text" ng-model="aurora_url" ng-required="true"/>
-  <span class="form_error" ng-show="GOINPUTNAME[aurora_url].$error.server">{{GOINPUTNAME[aurora_url].$error.server}}</span>
-</div>
+<fieldset>
+  <legend style="font-size: 18px; margin-top: 15px;">Cluster Settings</legend>
+  <p>General Aurora cluster configuration.</p>
 
-<div class="form_item_block">
-  <label>Aurora Cluster:<span class='asterix'>*</span></label>
-  <input type="text" ng-model="aurora_cluster" ng-required="true"/>
-  <span class="form_error" ng-show="GOINPUTNAME[aurora_cluster].$error.server">{{GOINPUTNAME[aurora_cluster].$error.server}}</span>
-</div>
+  <div class="form_item_block">
+    <label title="Location of the Aurora scheduler API">Aurora URL:<span class='asterix'>*</span></label>
+    <input type="text" ng-model="aurora_url" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[aurora_url].$error.server">{{GOINPUTNAME[aurora_url].$error.server}}</span>
+  </div>
 
-<div class="form_item_block">
-  <label>Aurora Role:<span class='asterix'>*</span></label>
-  <input type="text" ng-model="aurora_role" ng-required="true"/>
-  <span class="form_error" ng-show="GOINPUTNAME[aurora_role].$error.server">{{GOINPUTNAME[aurora_role].$error.server}}</span>
-</div>
+  <div class="form_item_block">
+    <label>Aurora Cluster:<span class='asterix'>*</span></label>
+    <input type="text" ng-model="aurora_cluster" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[aurora_cluster].$error.server">{{GOINPUTNAME[aurora_cluster].$error.server}}</span>
+  </div>
 
-<div class="form_item_block">
-  <label>Aurora Environment:<span class='asterix'>*</span></label>
-  <input type="text" ng-model="aurora_env" ng-required="true"/>
-  <span class="form_error" ng-show="GOINPUTNAME[aurora_env].$error.server">{{GOINPUTNAME[aurora_env].$error.server}}</span>
-</div>
+  <div class="form_item_block">
+    <label>Aurora Role:<span class='asterix'>*</span></label>
+    <input type="text" ng-model="aurora_role" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[aurora_role].$error.server">{{GOINPUTNAME[aurora_role].$error.server}}</span>
+  </div>
 
-<div class="form_item_block">
-  <label>Agent Source URL:</label>
-  <input type="text" ng-model="agent_source_url" ng-required="false"/>
-  <span class="form_error" ng-show="GOINPUTNAME[agent_source_url].$error.server">{{GOINPUTNAME[agent_source_url].$error.server}}</span>
-</div>
+  <div class="form_item_block">
+    <label>Aurora Environment:<span class='asterix'>*</span></label>
+    <input type="text" ng-model="aurora_env" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[aurora_env].$error.server">{{GOINPUTNAME[aurora_env].$error.server}}</span>
+  </div>
+</fieldset>
+
+<fieldset>
+  <legend style="font-size: 18px; margin-top: 15px;">Agent Settings</legend>
+  <div class="form_item_block">
+    <label title="Location to fetch the agent ZIP package from">Agent Source URL:</label>
+    <input type="text" ng-model="agent_source_url" ng-required="false"/>
+    <span class="form_error" ng-show="GOINPUTNAME[agent_source_url].$error.server">{{GOINPUTNAME[agent_source_url].$error.server}}</span>
+  </div>
+</fieldset>
