--- a/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
+++ b/resources/amperity/gocd/agent/aurora/cluster-profile-view.html
@@ -32,6 +32,11 @@
 <fieldset>
   <legend style="font-size: 18px; margin-top: 15px;">Agent Settings</legend>
   <div class="form_item_block">
+    <label title="GoCD server URL">Server API URL:<span class='asterix'>*</span></label>
+    <input type="text" ng-model="server_api_url" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[server_api_url].$error.server">{{GOINPUTNAME[server_api_url].$error.server}}</span>
+  </div>
+  <div class="form_item_block">
     <label title="Location to fetch the agent ZIP package from">Agent Source URL:</label>
     <input type="text" ng-model="agent_source_url" ng-required="false"/>
     <span class="form_error" ng-show="GOINPUTNAME[agent_source_url].$error.server">{{GOINPUTNAME[agent_source_url].$error.server}}</span>
